Swap defconfig with newer one. Saving old to _default_

--- a/arch/arm/configs/doubleshot_default_defconfig
+++ b/arch/arm/configs/doubleshot_default_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.72 Kernel Configuration
+# Linux/arm 3.0.62 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -39,8 +39,8 @@ CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-exp-sv"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
-CONFIG_HAVE_KERNEL_LZMA=y
-CONFIG_HAVE_KERNEL_LZO=y
+# CONFIG_HAVE_KERNEL_LZMA is not set
+# CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
@@ -65,15 +65,10 @@ CONFIG_GENERIC_IRQ_SHOW=y
 #
 # RCU Subsystem
 #
-# CONFIG_TREE_PREEMPT_RCU is not set
-CONFIG_JRCU=y
-# CONFIG_PREEMPT_RCU is not set
-CONFIG_JRCU_DAEMON=y
-CONFIG_JRCU_DAEMON_PRIO=0
-# CONFIG_JRCU_LAZY is not set
-CONFIG_PREEMPT_COUNT_CPU=y
+CONFIG_TREE_PREEMPT_RCU=y
+CONFIG_PREEMPT_RCU=y
 # CONFIG_RCU_TRACE is not set
-# CONFIG_RCU_FANOUT is not set
+CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
@@ -171,7 +166,6 @@ CONFIG_LBDAF=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_FIFO=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
@@ -1306,9 +1300,6 @@ CONFIG_WLAN=y
 CONFIG_BCMDHD=m
 CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
-# CONFIG_DHD_USE_STATIC_BUF is not set
-# CONFIG_DHD_USE_SCHED_SCAN is not set
-# CONFIG_DHD_ENABLE_P2P is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
