--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -137,8 +137,8 @@ CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
-CONFIG_SLUB=y
-# CONFIG_SLQB is not set
+# CONFIG_SLUB is not set 
+CONFIG_SLQB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 CONFIG_HAVE_OPROFILE=y
@@ -153,6 +153,7 @@ CONFIG_HAVE_CLK=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
+CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -2758,6 +2759,9 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_SLUB_STATS is not set
+CONFIG_SLQB_DEBUG=y
+CONFIG_SLQB_DEBUG_ON=y
+# CONFIG_SLQB_SYSFS is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_STACKTRACE is not set
 CONFIG_DEBUG_BUGVERBOSE=y
