--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -2759,8 +2759,8 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_SLUB_STATS is not set
-CONFIG_SLQB_DEBUG=y
-CONFIG_SLQB_DEBUG_ON=y
+# CONFIG_SLQB_DEBUG  is not set
+# CONFIG_SLQB_DEBUG_ON  is not set
 # CONFIG_SLQB_SYSFS is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_STACKTRACE is not set
