disable CONFIG_DEBUG_FS and open the pandora's box While fixing the mess spilled out of the box, all code changes are my fault, don't blame anyone else :) To the devs who made this mess: A kernel option is an option, you must know that it can be disabled. If you need a kernel option, declare a dependence in one of the Kconfig files. Otherwise, put your "professional" coding together and handle the optional kernel features properly. DEBUG_FS is not your scratch pad. Sheesh! -mrg666
Conflicts:
	drivers/tty/serial/msm_serial_hs.c
	drivers/tty/serial/msm_serial_hs_ti_dc.c
	drivers/usb/gadget/f_diag.c
	drivers/usb/gadget/u_bam.c
	drivers/usb/gadget/u_serial.c

--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -475,7 +475,7 @@ CONFIG_MSM_SCM=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_BUSPM_DEV=y
-# CONFIG_MSM_RPM_LOG is not set
+CONFIG_MSM_RPM_LOG=y
 # CONFIG_MSM_RPM_STATS_LOG is not set
 # CONFIG_MSM_IOMMU is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
@@ -514,7 +514,7 @@ CONFIG_FOOTPRINT_IRQ=y
 # CONFIG_TIWLAN_SDIO is not set
 CONFIG_HTC_BATT_ALARM=y
 # CONFIG_REMOVE_EBI1_FIXED_CLK is not set
-CONFIG_MSM_DCVS=y
+# CONFIG_MSM_DCVS is not set
 CONFIG_FORCE_FAST_CHARGE=y
 
 #
@@ -2765,7 +2765,7 @@ CONFIG_MAGIC_SYSRQ=y
 # CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_SLUB_STATS is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
-# CONFIG_STACKTRACE is not set
+CONFIG_STACKTRACE=y
 CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_MEMORY_INIT is not set
 # CONFIG_LKDTM is not set
