--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -2766,7 +2766,7 @@ CONFIG_DEBUG_FS=y
 # CONFIG_STACKTRACE is not set
 CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_MEMORY_INIT is not set
-CONFIG_FRAME_POINTER=y
+# CONFIG_FRAME_POINTER is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_RCU_CPU_STALL_VERBOSE is not set
 # CONFIG_LKDTM is not set
