--- a/drivers/gpu/msm/Kconfig
+++ b/drivers/gpu/msm/Kconfig
@@ -115,3 +115,9 @@ config MSM_KGSL_DEFAULT_GPUMMU
 config MSM_KGSL_GPU_USAGE_SYSTRACE
         bool "Enable kgsl_usage node for ftrace gpu usage event"
         default y
+
+config MSM_KGSL_KILL_HANG_PROCESS
+	bool "Enable killing recoverable gpu hang process routine"
+	default y
+	---help---
+	We only enable this config in CRC branch.
