Initial commit for s5k3h1gx sensor, copy from s5k3h2yx

--- a/drivers/media/video/msm/Kconfig
+++ b/drivers/media/video/msm/Kconfig
@@ -400,3 +400,19 @@ config VD6869
 	---help---
 	ST 4MP Bayer Sensor
 
+config S5K3H1GX
+	bool "Sensor s5k3h1gx (Samsung 8M)"
+	depends on MSM_CAMERA
+	default n
+	---help---
+	  Support for S5K3H1GX samsung sensor driver.
+	  It is a Bayer 8MP sensor with auto focus and it supports
+	  two mipi lanes.
+
+config S5K3H1GX_ACT
+	bool "Sensor s5k3h1gx actuator"
+	depends on MSM_CAMERA
+	default n
+	---help---
+	  Autofocus of s5k3h1gx actuator
+
