--- a/drivers/media/video/msm/actuators/Makefile
+++ b/drivers/media/video/msm/actuators/Makefile
@@ -12,3 +12,4 @@ obj-$(CONFIG_AD5046_ACT) += ad5046_act.o
 obj-$(CONFIG_IMX175_ACT) += imx175_act.o
 obj-$(CONFIG_OV5693_ACT) += ov5693_act.o
 obj-$(CONFIG_RUMBAS_ACT) += rumbas_act.o
+obj-$(CONFIG_S5K3H1GX_ACT) += s5k3h1gx_act.o
