--- a/drivers/media/video/msm/sensors/Makefile
+++ b/drivers/media/video/msm/sensors/Makefile
@@ -25,5 +25,5 @@ obj-$(CONFIG_WEBCAM_OV7692_QRD) += ov7692_qrd_v4l2.o
 obj-$(CONFIG_OV2722) += ov2722_v4l2.o
 obj-$(CONFIG_OV5693) += ov5693_v4l2.o
 obj-$(CONFIG_S5K6A2YA) += s5k6a2ya_v4l2.o
+obj-$(CONFIG_S5K3H1GX) += s5k3h1gx_v4l2.o
 obj-$(CONFIG_MT9V113) += mt9v113_v4l2.o mt9v113_reg_lens_9251.o
-
