--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -104,6 +104,11 @@ config TOUCHSCREEN_ATMEL_224E
 	help
 		This enables support for Atmel over I2C based touchscreens.
 
+config TOUCHSCREEN_CYPRESS_TMA
+        tristate "Cypress TMA300 based touchscreens"
+        depends on I2C
+        default n
+
 config TOUCHSCREEN_AD7879
 	tristate "Analog Devices AD7879-1/AD7889-1 touchscreen interface"
 	help
