--- a/drivers/leds/Makefile
+++ b/drivers/leds/Makefile
@@ -71,3 +71,4 @@ obj-$(CONFIG_LEDS_TRIGGER_SLEEP)	+= ledtrig-sleep.o
 
 # FLASHLIGHT Drivers
 obj-$(CONFIG_FLASHLIGHT_TPS61310)       += tps61310_flashlight.o
+obj-$(CONFIG_FLASHLIGHT_AAT1271)	+= flashlight_aat1271.o
