Rebase back to Wild

--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -36,7 +36,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-doubleshot-exp"
+CONFIG_LOCALVERSION="-WildKernel-007"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -70,7 +70,7 @@ CONFIG_JRCU=y
 # CONFIG_PREEMPT_RCU is not set
 CONFIG_JRCU_DAEMON=y
 CONFIG_JRCU_DAEMON_PRIO=0
-# CONFIG_JRCU_LAZY is not set
+ONFIG_JRCU_LAZY=y
 CONFIG_PREEMPT_COUNT_CPU=y
 # CONFIG_RCU_TRACE is not set
 # CONFIG_RCU_FANOUT is not set
@@ -189,7 +189,7 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_DEFAULT_SIO=y
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_IOSCHED="sio"
+CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
