ds: add crucial optical joystick drivers and rework gpio drivers to support them
Conflicts:
	arch/arm/configs/doubleshot_defconfig

--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -517,6 +517,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MACH_PYRAMID is not set
 CONFIG_MACH_DOUBLESHOT=y
 # CONFIG_SUPPORT_USB_SPEAKER is not set
+CONFIG_MICROP_COMMON=y
 CONFIG_SENSE_4_PLUS=y
 # CONFIG_MSM_NONSMD_PACKET_FILTER is not set
 # CONFIG_IO_FOOTPRINT is not set
@@ -1660,8 +1661,11 @@ CONFIG_INPUT_GPIO=y
 CONFIG_PMIC8058_OTHC=y
 # CONFIG_BOSCH_BMA150 is not set
 # CONFIG_INPUT_DUMMY_KEYPAD is not set
-CONFIG_POWER_KEY_LED=y
+# CONFIG_POWER_KEY_LED is not set
 # CONFIG_POWER_KEY_CLR_RESET is not set
+CONFIG_INPUT_OPTICALJOYSTICK=y
+CONFIG_OPTICALJOYSTICK_CRUCIAL=y
+CONFIG_OPTICALJOYSTICK_CRUCIAL_uP=y
 
 #
 # Hardware I/O ports
