--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -431,6 +431,7 @@ CONFIG_MSM_DALRPC=y
 CONFIG_GPU_OVERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_MPDEC=y
+CONFIG_CPU_FREQ_SYNC_SCALING=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=96000
