Update governor base

--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.76 Kernel Configuration
+# Linux/arm 3.0.x Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -36,7 +36,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-WildKernel-reloaded"
+CONFIG_LOCALVERSION="-WildKernel-Reloaded"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -433,7 +433,7 @@ CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_MPDEC=y
 CONFIG_CPU_FREQ_SYNC_SCALING=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MAX=1728000
 CONFIG_MSM_CPU_FREQ_MIN=96000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=96000
@@ -696,11 +696,13 @@ CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
-CONFIG_INTELLI_MAX_INACTIVE_FREQ=756000
+CONFIG_INTELLI_MAX_INACTIVE_FREQ=1026000
 CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND_2_PHASE=y
 CONFIG_SEC_LIMIT_MAX_FREQ=y
+CONFIG_CPUFREQ_LIMIT_MAX_FREQ=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
-# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
@@ -709,12 +711,14 @@ CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 # CONFIG_CPU_FREQ_GOV_SAKURACTIVE is not set
 CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=756000
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
 CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1026000
-CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
+# CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROLis not set
 CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE=y
-# CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS is not set
+CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS=y
+CONFIG_CPU_FREQ_MIN_TICKS=10
+CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 # CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
 # CONFIG_CPU_FREQ_GOV_LULZACTIVEQ is not set
 # CONFIG_CPU_FREQ_GOV_PEGASUSQ is not set
