--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.87 Kernel Configuration
+# Linux/arm 3.0.x Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -36,7 +36,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-r13-linaro-sv"
+CONFIG_LOCALVERSION="-WildKernel-Reloaded-ION"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -2046,7 +2046,7 @@ CONFIG_FB_MSM_MIPI_HIMAX_VIDEO_720P_PT=y
 # CONFIG_FB_MSM_MIPI_HIMAX_CMD_720P_PT is not set
 CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
 CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
-CONFIG_FB_MSM_OVERLAY_WRITEBACK=y
+# CONFIG_FB_MSM_OVERLAY_WRITEBACK is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA_PANEL is not set
