--- a/arch/arm/configs/senny_defconfig
+++ b/arch/arm/configs/senny_defconfig
@@ -2560,16 +2560,12 @@ CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
-# CONFIG_FB_MSM_HDMI_AS_PRIMARY is not set
 CONFIG_FB_MSM_PANEL_NONE=y
-CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
-CONFIG_FB_MSM_HDMI_COMMON=y
-CONFIG_FB_MSM_HDMI_3D=y
+# CONFIG_FB_MSM_EXT_INTERFACE_COMMON is not set
+# CONFIG_FB_MSM_HDMI_COMMON is not set
+# CONFIG_FB_MSM_HDMI_3D is not set
 # CONFIG_FB_MSM_HDMI_ADV7520_PANEL is not set
-CONFIG_FB_MSM_HDMI_MSM_PANEL=y
-# CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
-CONFIG_FB_MSM_HDMI_MSM_PANEL_HDCP_SUPPORT=y
-# CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT is not set
+# CONFIG_FB_MSM_HDMI_MSM_PANEL is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_M is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_J is not set
 # CONFIG_FB_MSM_TVOUT_PAL_BDGHIN is not set
