--- a/arch/arm/configs/senny_defconfig
+++ b/arch/arm/configs/senny_defconfig
@@ -2315,26 +2315,25 @@ CONFIG_ISDBT_NMI=y
 CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA_DEBUG is not set
 CONFIG_MSM_CAMERA_V4L2=y
+CONFIG_MSM_CAMERA_LEGACY=y
+# CONFIG_MSM_CAMERA_7X30 is not set
+# CONFIG_MSM_CAMERA_8X60 is not set
+# CONFIG_720P_CAMERA is not set
+# CONFIG_CAMERA_ZSL is not set
+# CONFIG_CAMERA_3D is not set
+# CONFIG_FLASH_BACKLIGHT_OFF is not set
 
 #
 # Camera Sensor Selection
 #
 # CONFIG_IMX074 is not set
-# CONFIG_S5K3H2YX is not set
-# CONFIG_S5K6A1GX is not set
-# CONFIG_AR0260 is not set
-# CONFIG_OV2722 is not set
-# CONFIG_OV5647 is not set
-# CONFIG_MT9M114 is not set
-# CONFIG_WEBCAM_OV9726 is not set
-# CONFIG_VX6953 is not set
-# CONFIG_MT9E013 is not set
-# CONFIG_IMX074_ACT is not set
-# CONFIG_S5K3H2YX_ACT is not set
 # CONFIG_S5K4E1 is not set
+# CONFIG_S5K4E1GX is not set
+# CONFIG_S5K4E5YX is not set
+CONFIG_S5K3H1GX=y
 # CONFIG_MSM_CAMERA_FLASH_SC628A is not set
 # CONFIG_IMX072 is not set
-# CONFIG_OV2720 is not set
+# CONFIG_QS_MT9P017 is not set
 CONFIG_MSM_CAMERA_FLASH=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_ACTUATOR=y
@@ -2342,25 +2341,15 @@ CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
 # CONFIG_RAWCHIP is not set
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
-# CONFIG_S5K3L1YX is not set
-# CONFIG_IMX091 is not set
-# CONFIG_IMX175 is not set
-# CONFIG_IMX135 is not set
-# CONFIG_OV8838 is not set
-# CONFIG_IMX175_ACT is not set
-# CONFIG_RUMBAS_ACT is not set
-# CONFIG_AD5823_ACT is not set
-# CONFIG_AD5816_ACT is not set
-# CONFIG_TI201_ACT is not set
+# CONFIG_S5K3H2YX is not set
+# CONFIG_S5K3H2YX_ACT is not set
+# CONFIG_S5K4E5YX_ACT is not set
 CONFIG_MT9V113=y
-# CONFIG_IMX175_2LANE is not set
-# CONFIG_OV5693_ACT is not set
-# CONFIG_OV5693 is not set
-# CONFIG_RAWCHIP_MCLK is not set
-# CONFIG_S5K6A2YA is not set
-# CONFIG_VD6869 is not set
-CONFIG_S5K3H1GX=y
-CONFIG_S5K3H1GX_ACT=y
+# CONFIG_S5K6A1GX is not set
+# CONFIG_S5K6AAFX is not set
+# CONFIG_OV8810 is not set
+# CONFIG_OV8830 is not set
+# CONFIG_SP3D is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 CONFIG_MSM_VIDC=y
 CONFIG_RADIO_ADAPTERS=y
@@ -2431,19 +2420,11 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
-
-#
-# Miscellaneous I2C Chip support II
-#
-CONFIG_FB_MSM_HDMI_MHL=y
-CONFIG_FB_MSM_HDMI_MHL_SII9234=y
-CONFIG_INTERNAL_CHARGING_SUPPORT=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
 CONFIG_MSM_VIDC_VDEC=y
 # CONFIG_MSM_VIDC_CONTENT_PROTECTION is not set
 CONFIG_FB_MSM=y
-# CONFIG_FB_MSM_CABC is not set
 # CONFIG_FB_MSM_BACKLIGHT is not set
 # CONFIG_FB_MSM_LOGO is not set
 CONFIG_FB_MSM_LCDC_HW=y
@@ -2461,8 +2442,7 @@ CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
 # CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
-# CONFIG_MSM_AUTOBL_ENABLE is not set
-CONFIG_FB_MSM_DTV=y
+# CONFIG_FB_MSM_DTV is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
@@ -2477,7 +2457,6 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
 # CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
 # CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
-# CONFIG_FB_MSM_MIPI_DSI_HIMAX is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
@@ -2502,8 +2481,6 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT is not set
 # CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT is not set
-# CONFIG_FB_MSM_MIPI_HIMAX_VIDEO_720P_PT is not set
-# CONFIG_FB_MSM_MIPI_HIMAX_CMD_720P_PT is not set
 # CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT is not set
@@ -2547,8 +2524,6 @@ CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 # CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT_PANEL is not set
-# CONFIG_FB_MSM_MIPI_HIMAX_VIDEO_720P_PT_PANEL is not set
-# CONFIG_FB_MSM_MIPI_HIMAX_CMD_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA_PANEL is not set
@@ -2577,7 +2552,8 @@ CONFIG_FB_MSM_TVOUT_NONE=y
 CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
 # CONFIG_FB_MSM_EBI2_EPSON_S1D_QVGA_PANEL is not set
 # CONFIG_FB_MSM_EBI2_PANEL_DETECT is not set
-# CONFIG_MSM_ALT_DSI_ESCAPE_CLOCK is not set
+# CONFIG_FB_MSM_QPIC_ILI_QVGA_PANEL is not set
+# CONFIG_FB_MSM_QPIC_PANEL_DETECT is not set
 # CONFIG_EXYNOS_VIDEO is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 # CONFIG_LOGO is not set
@@ -2624,7 +2600,6 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8X60_PCM=y
 CONFIG_SND_SOC_MSM8X60_DAI=y
 CONFIG_SND_SOC_MSM8X60=y
-# CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO is not set
 # CONFIG_MSM_8x60_VOIP is not set
 CONFIG_SND_SOC_MSM_QDSP6_INTF=y
 # CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
