--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2617,6 +2617,14 @@ config MACH_PYRAMID
 	help
 	  Support for the Pyramid device.
 
+config MACH_DOUBLESHOT
+	depends on ARCH_MSM8X60
+	default n
+	bool "Doubleshot"
+ 	select FB_MSM_MIPI_DSI
+	help
+	  Support for the Doubleshot device.
+
 config HTC_HEADSET_ONE_WIRE
 	tristate "HTC 1-wire headset detection driver"
 	depends on HTC_HEADSET_MGR
