--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -2508,7 +2508,7 @@ CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 # CONFIG_FB_MSM_LVDS_CHIMEI_WXGA_PANEL is not set
 # CONFIG_FB_MSM_LVDS_FRC_FHD_PANEL is not set
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
-# CONFIG_FB_MSM_MIPI_PANEL_DETECT is not set
+CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
