--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -20,6 +20,7 @@ CONFIG_ARM_TICKET_LOCKS=y
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
+CONFIG_MICROP_COMMON=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
@@ -1660,8 +1661,11 @@ CONFIG_INPUT_GPIO=y
 CONFIG_PMIC8058_OTHC=y
 # CONFIG_BOSCH_BMA150 is not set
 # CONFIG_INPUT_DUMMY_KEYPAD is not set
-CONFIG_POWER_KEY_LED=y
+# CONFIG_POWER_KEY_LED is not set
 # CONFIG_POWER_KEY_CLR_RESET is not set
+CONFIG_INPUT_OPTICALJOYSTICK=y
+CONFIG_OPTICALJOYSTICK_CRUCIAL=y
+CONFIG_OPTICALJOYSTICK_CRUCIAL_uP=y
 
 #
 # Hardware I/O ports
